HTNPlanner/src/antlr/generated/JSHOP2Parser.java
// Generated from JSHOP2.g4 by ANTLR 4.2.2

package antlr.generated;
	
import java.util.Collection;
import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import preconditions.LogicalPrecondition;
import tasks.Method;
import tasks.Operator;
import tasks.TaskInvoker;
import terms.LogicalAtom;
import terms.Term;
import terms.Variable;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSHOP2Parser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__30=1, T__29=2, T__28=3, T__27=4, T__26=5, T__25=6, T__24=7, T__23=8, 
		T__22=9, T__21=10, T__20=11, T__19=12, T__18=13, T__17=14, T__16=15, T__15=16, 
		T__14=17, T__13=18, T__12=19, T__11=20, T__10=21, T__9=22, T__8=23, T__7=24, 
		T__6=25, T__5=26, T__4=27, T__3=28, T__2=29, T__1=30, T__0=31, COMMENT=32, 
		WS=33, NIL=34, SYMBOL=35, NUMBER=36;
	public static final String[] tokenNames = {
		"<INVALID>", "'Defdomain'", "':sort-by'", "'Defproblem'", "'-'", "'*'", 
		"'not'", "'('", "'<'", "':method'", "'!='", "':unordered'", "':operator'", 
		"':first'", "'<='", "'?'", "'defproblem'", "'and'", "'^'", "'.'", "')'", 
		"':-'", "'+'", "'='", "'defdomain'", "':protection'", "'>'", "'call'", 
		"':immediate'", "'/'", "'>='", "'!'", "COMMENT", "WS", "'nil'", "SYMBOL", 
		"NUMBER"
	};
	public static final int
		RULE_program = 0, RULE_domain = 1, RULE_item = 2, RULE_method = 3, RULE_operator = 4, 
		RULE_protection_condition = 5, RULE_compound_task_atom = 6, RULE_primitive_task_atom = 7, 
		RULE_task_list = 8, RULE_task_atom = 9, RULE_task = 10, RULE_axiom = 11, 
		RULE_logical_precondition = 12, RULE_first_satisfier_pre = 13, RULE_sorted_pre = 14, 
		RULE_logical_expression = 15, RULE_logical_atom = 16, RULE_terms = 17, 
		RULE_term_list = 18, RULE_list_head = 19, RULE_term = 20, RULE_call_term = 21, 
		RULE_variable = 22, RULE_primitive_task = 23, RULE_predicate = 24, RULE_compound_task = 25, 
		RULE_java_function = 26, RULE_java_class = 27, RULE_name = 28, RULE_shop2_function = 29, 
		RULE_shop2_comparator = 30, RULE_problem = 31, RULE_initial_state = 32, 
		RULE_goals = 33;
	public static final String[] ruleNames = {
		"program", "domain", "item", "method", "operator", "protection_condition", 
		"compound_task_atom", "primitive_task_atom", "task_list", "task_atom", 
		"task", "axiom", "logical_precondition", "first_satisfier_pre", "sorted_pre", 
		"logical_expression", "logical_atom", "terms", "term_list", "list_head", 
		"term", "call_term", "variable", "primitive_task", "predicate", "compound_task", 
		"java_function", "java_class", "name", "shop2_function", "shop2_comparator", 
		"problem", "initial_state", "goals"
	};

	@Override
	public String getGrammarFileName() { return "JSHOP2.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSHOP2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public ProblemContext problem() {
			return getRuleContext(ProblemContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(70);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); domain();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69); problem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterDomain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitDomain(this);
		}
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_domain);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); match(7);
			setState(73);
			_la = _input.LA(1);
			if ( !(_la==1 || _la==24) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(74); name();
			setState(75); match(7);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76); item();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==7 );
			setState(81); match(20);
			setState(82); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemContext extends ParserRuleContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public AxiomContext axiom() {
			return getRuleContext(AxiomContext.class,0);
		}
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitItem(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(84); operator();
				}
				break;

			case 2:
				{
				setState(85); method();
				}
				break;

			case 3:
				{
				setState(86); axiom();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Method _method;
		public Task_listContext task_list(int i) {
			return getRuleContext(Task_listContext.class,i);
		}
		public Logical_preconditionContext logical_precondition(int i) {
			return getRuleContext(Logical_preconditionContext.class,i);
		}
		public Compound_task_atomContext compound_task_atom() {
			return getRuleContext(Compound_task_atomContext.class,0);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<Logical_preconditionContext> logical_precondition() {
			return getRuleContexts(Logical_preconditionContext.class);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public List<Task_listContext> task_list() {
			return getRuleContexts(Task_listContext.class);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); match(7);
			setState(90); match(9);
			setState(91); compound_task_atom();
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				_la = _input.LA(1);
				if (_la==SYMBOL) {
					{
					setState(92); name();
					}
				}

				{
				setState(95); logical_precondition();
				}
				{
				setState(96); task_list();
				}
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << NIL) | (1L << SYMBOL))) != 0) );
			setState(102); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public Operator _operator;
		public Term_listContext deleteList;
		public Term_listContext addList;
		public TermContext cost;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Term_listContext term_list(int i) {
			return getRuleContext(Term_listContext.class,i);
		}
		public Primitive_task_atomContext primitive_task_atom() {
			return getRuleContext(Primitive_task_atomContext.class,0);
		}
		public Logical_preconditionContext logical_precondition() {
			return getRuleContext(Logical_preconditionContext.class,0);
		}
		public List<Term_listContext> term_list() {
			return getRuleContexts(Term_listContext.class);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitOperator(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(7);
			setState(105); match(12);
			setState(106); primitive_task_atom();
			setState(107); logical_precondition();
			setState(108); ((OperatorContext)_localctx).deleteList = term_list();
			setState(109); ((OperatorContext)_localctx).addList = term_list();
			setState(111);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << 15) | (1L << NIL) | (1L << SYMBOL) | (1L << NUMBER))) != 0)) {
				{
				setState(110); ((OperatorContext)_localctx).cost = term();
				}
			}

			setState(113); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Protection_conditionContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Logical_atomContext logical_atom() {
			return getRuleContext(Logical_atomContext.class,0);
		}
		public Protection_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_protection_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterProtection_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitProtection_condition(this);
		}
	}

	public final Protection_conditionContext protection_condition() throws RecognitionException {
		Protection_conditionContext _localctx = new Protection_conditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_protection_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(7);
			setState(116); match(25);
			setState(119);
			switch (_input.LA(1)) {
			case 7:
				{
				setState(117); logical_atom();
				}
				break;
			case 15:
				{
				setState(118); variable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(121); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compound_task_atomContext extends ParserRuleContext {
		public Compound_taskContext compound_task() {
			return getRuleContext(Compound_taskContext.class,0);
		}
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public Compound_task_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_task_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterCompound_task_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitCompound_task_atom(this);
		}
	}

	public final Compound_task_atomContext compound_task_atom() throws RecognitionException {
		Compound_task_atomContext _localctx = new Compound_task_atomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compound_task_atom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(7);
			setState(124); compound_task();
			setState(125); terms();
			setState(126); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_task_atomContext extends ParserRuleContext {
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public Primitive_taskContext primitive_task() {
			return getRuleContext(Primitive_taskContext.class,0);
		}
		public Primitive_task_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_task_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterPrimitive_task_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitPrimitive_task_atom(this);
		}
	}

	public final Primitive_task_atomContext primitive_task_atom() throws RecognitionException {
		Primitive_task_atomContext _localctx = new Primitive_task_atomContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primitive_task_atom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(7);
			setState(129); primitive_task();
			setState(130); terms();
			setState(131); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Task_listContext extends ParserRuleContext {
		public Collection<TaskInvoker> _tasksPointers;
		public Task_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task_list; }
	 
		public Task_listContext() { }
		public void copyFrom(Task_listContext ctx) {
			super.copyFrom(ctx);
			this._tasksPointers = ctx._tasksPointers;
		}
	}
	public static class Task_list_CContext extends Task_listContext {
		public Task_atomContext task_atom(int i) {
			return getRuleContext(Task_atomContext.class,i);
		}
		public List<Task_atomContext> task_atom() {
			return getRuleContexts(Task_atomContext.class);
		}
		public Task_list_CContext(Task_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterTask_list_C(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitTask_list_C(this);
		}
	}
	public static class Task_list_AContext extends Task_listContext {
		public TerminalNode NIL() { return getToken(JSHOP2Parser.NIL, 0); }
		public Task_list_AContext(Task_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterTask_list_A(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitTask_list_A(this);
		}
	}
	public static class Task_list_BContext extends Task_listContext {
		public Task_atomContext task_atom() {
			return getRuleContext(Task_atomContext.class,0);
		}
		public Task_list_BContext(Task_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterTask_list_B(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitTask_list_B(this);
		}
	}

	public final Task_listContext task_list() throws RecognitionException {
		Task_listContext _localctx = new Task_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_task_list);
		int _la;
		try {
			setState(146);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new Task_list_AContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(133); match(NIL);
				}
				break;

			case 2:
				_localctx = new Task_list_BContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(134); task_atom();
				}
				break;

			case 3:
				_localctx = new Task_list_CContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(135); match(7);
				setState(137);
				_la = _input.LA(1);
				if (_la==11) {
					{
					setState(136); match(11);
					}
				}

				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==7) {
					{
					{
					setState(139); task_atom();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145); match(20);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Task_atomContext extends ParserRuleContext {
		public TaskInvoker _taskPointer;
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public TaskContext task() {
			return getRuleContext(TaskContext.class,0);
		}
		public Task_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterTask_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitTask_atom(this);
		}
	}

	public final Task_atomContext task_atom() throws RecognitionException {
		Task_atomContext _localctx = new Task_atomContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_task_atom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); match(7);
			setState(150);
			_la = _input.LA(1);
			if (_la==28) {
				{
				setState(149); match(28);
				}
			}

			setState(152); task();
			setState(153); terms();
			setState(154); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TaskContext extends ParserRuleContext {
		public Compound_taskContext compound_task() {
			return getRuleContext(Compound_taskContext.class,0);
		}
		public Primitive_taskContext primitive_task() {
			return getRuleContext(Primitive_taskContext.class,0);
		}
		public TaskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitTask(this);
		}
	}

	public final TaskContext task() throws RecognitionException {
		TaskContext _localctx = new TaskContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_task);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			switch (_input.LA(1)) {
			case 31:
				{
				setState(156); primitive_task();
				}
				break;
			case SYMBOL:
				{
				setState(157); compound_task();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxiomContext extends ParserRuleContext {
		public LogicalPrecondition _axiom;
		public Logical_preconditionContext logical_precondition(int i) {
			return getRuleContext(Logical_preconditionContext.class,i);
		}
		public List<Logical_preconditionContext> logical_precondition() {
			return getRuleContexts(Logical_preconditionContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public Logical_atomContext logical_atom() {
			return getRuleContext(Logical_atomContext.class,0);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public AxiomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_axiom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterAxiom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitAxiom(this);
		}
	}

	public final AxiomContext axiom() throws RecognitionException {
		AxiomContext _localctx = new AxiomContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_axiom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); match(7);
			setState(161); match(21);
			setState(162); logical_atom();
			setState(165);
			switch (_input.LA(1)) {
			case SYMBOL:
				{
				setState(163); name();
				}
				break;
			case 7:
			case NIL:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(172); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(167); logical_precondition();
				setState(170);
				switch (_input.LA(1)) {
				case SYMBOL:
					{
					setState(168); name();
					}
					break;
				case 7:
				case 20:
				case NIL:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(174); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==7 || _la==NIL );
			setState(176); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_preconditionContext extends ParserRuleContext {
		public LogicalPrecondition _precondition;
		public Logical_preconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_precondition; }
	 
		public Logical_preconditionContext() { }
		public void copyFrom(Logical_preconditionContext ctx) {
			super.copyFrom(ctx);
			this._precondition = ctx._precondition;
		}
	}
	public static class Logical_precondition_AContext extends Logical_preconditionContext {
		public TerminalNode NIL() { return getToken(JSHOP2Parser.NIL, 0); }
		public Logical_precondition_AContext(Logical_preconditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterLogical_precondition_A(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitLogical_precondition_A(this);
		}
	}
	public static class Logical_precondition_BContext extends Logical_preconditionContext {
		public Logical_expressionContext logical_expression() {
			return getRuleContext(Logical_expressionContext.class,0);
		}
		public Logical_precondition_BContext(Logical_preconditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterLogical_precondition_B(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitLogical_precondition_B(this);
		}
	}
	public static class Logical_precondition_CContext extends Logical_preconditionContext {
		public First_satisfier_preContext first_satisfier_pre() {
			return getRuleContext(First_satisfier_preContext.class,0);
		}
		public Logical_precondition_CContext(Logical_preconditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterLogical_precondition_C(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitLogical_precondition_C(this);
		}
	}
	public static class Logical_precondition_DContext extends Logical_preconditionContext {
		public Sorted_preContext sorted_pre() {
			return getRuleContext(Sorted_preContext.class,0);
		}
		public Logical_precondition_DContext(Logical_preconditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).enterLogical_precondition_D(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSHOP2Listener ) ((JSHOP2Listener)listener).exitLogical_precondition_D(this);
		}
	}

	public final Logical_preconditionContext logical_precondition() throws RecognitionException {
